Validacion de acceso a recursos

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,6 @@
 Options All -Indexes
 
-Options -Mmultiviews
-
+Options -MultiViews
 RewriteEngine On
 RewriteCond %{REQUEST_FILNAME} !-f
-RewriteRule ^ index.php [QSA, L]
+RewriteRule ^ index.php [QSA,L]
